--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
 body {
   width: 100%;
   height: 100vh;
-  background-color: hsl(216, 15%, 48%);
+  background-color: hsl(212, 45%, 89%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,6 +59,4 @@ main {
   .qr-card {
     width: 90%;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
